partial fix for bug 14599.  We no longer crash.  The frameset loads in the editor window, but no editor is actually attached, so no editing is possible.  Next step is to detect the error case and stop the document load altogether.