editor/libeditor/html/nsHTMLEditor.cpp
@@ -368,6 +368,11 @@ NS_IMETHODIMP nsHTMLEditor::Init(nsIDOMDocument *aDoc,
   result = nsEditor::Init(aDoc, aPresShell, aFlags);
   if (NS_FAILED(result)) { return result; }
 
+  nsCOMPtr<nsIDOMElement> bodyElement;
+  result = nsEditor::GetBodyElement(getter_AddRefs(bodyElement));
+  if (NS_FAILED(result)) { return result; }
+  if (!bodyElement) { return NS_ERROR_NULL_POINTER; }
+
   // init the type-in state
   mTypeInState = new TypeInState();
   if (!mTypeInState) {return NS_ERROR_NULL_POINTER;}
